# rustrt

./: .gitignore  Cargo.toml  rustfmt.toml
examples/: command_line.yml  myrt.rs
models/: CornellBox-Empty-CO.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl  first_model.xml  sponza.mtl
models/sibenik/: sibenik.mtl
models/sponza-crytek/: sponza.mtl
src/: basic_object.rs  bounding_box.rs  bvh.rs  camera.rs  casefopen.rs  collision.rs  colour.rs  command_line.yml  compound_object.rs  direct_lighting.rs  dispatch_queue.rs  either.rs  fragment.rs  heap.rs  intersectable.rs  kdtree.rs  lib.rs  light.rs  main.rs  material.rs  media.rs  mesh.rs  mod.rs  objects.rs  photon_map.rs  ray.rs  render_configuration.rs  render_pipeline.rs  scene.rs  shader.rs  sphere.rs  texture.rs  triangle.rs  vec4d.rs  vectors.rs  wavefront_material.rs
